--- a/src/assets/scss/feature/_flex.scss
+++ b/src/assets/scss/feature/_flex.scss
@@ -35,3 +35,9 @@
 .content-center {
   justify-content: center;
 }
+.content-start {
+  justify-content: flex-start;
+}
+.content-end {
+  justify-content: flex-end;
+}
