--- a/src/assets/scss/feature/_utility.scss
+++ b/src/assets/scss/feature/_utility.scss
@@ -67,3 +67,14 @@ $unit_map: (
     margin-bottom: $val;
   }
 }
+
+.w-100 {
+  width: 100%;
+}
+.h-100 {
+  height: 100%;
+}
+
+.pointer {
+  cursor: pointer;
+}
