--- a/src/assets/scss/feature/_utility.scss
+++ b/src/assets/scss/feature/_utility.scss
@@ -44,6 +44,9 @@ $unit_map: (
     padding-top: $val;
     padding-bottom: $val;
   }
+  .u-pa-#{$unit} {
+    padding: $val;
+  }
 
   /** maring */
   .u-mt-#{$unit} {
@@ -65,6 +68,9 @@ $unit_map: (
   .u-my-#{$unit} {
     margin-top: $val;
     margin-bottom: $val;
+  }
+  .u-ma-#{$unit} {
+    margin: $val;
   }
 }
 
