add full pokedex

--- a/src/assets/scss/component/_flexTable.scss
+++ b/src/assets/scss/component/_flexTable.scss
@@ -1,7 +1,8 @@
 .flex-table {
   position: relative;
   display: grid;
-  overflow: auto;
+  // overflow: auto;
+  overflow: hidden;
   grid-template-rows: max-content 1fr;
   border: 1px solid #ddd;
   border-radius: 0.325rem;
@@ -9,7 +10,7 @@
   &-header {
     z-index: 2;
     position: sticky;
-    top: 0px;
+    top: 1px;
     background: #fff;
     font-weight: 700;
   }
@@ -30,6 +31,7 @@
     justify-content: stretch;
     min-width: fit-content;
     width: 100%;
+    overflow: auto;
   }
   &-column {
     padding: 4px;
