add css variable

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -2,3 +2,8 @@ $primary: #42b983;
 $info: #3175af;
 $danger: #ed2e2e;
 $dark: #222237;
+
+$text-primary: #303133;
+$text-normal: #606266;
+$text-secondary: #909399;
+$text-placeholder: #c0c4cc;
