--- a/src/assets/scss/feature/_reset.scss
+++ b/src/assets/scss/feature/_reset.scss
@@ -15,7 +15,7 @@ body {
   overflow: hidden;
 }
 body {
-  color: #444;
+  color: $text-normal;
   font-family: 'Noto Sans TC', 'Microsoft Jheng Hei', sans-serif;
   font-size: 14px;
 }
